@@ -43,6 +43,7 @@ dependencies {
 
 tasks.withType(Test) {
     maxHeapSize = '1024m'
+    jvmArgs "-XX:MaxPermSize=512m"
 }
 
 jacocoTestReport {
